2013-09-24  Joel Brobecker  <brobecker@adacore.com>

	* amd64-tdep.c: #include "value.h"
	(amd64_windows_classify): Delete.
	(amd64_windows_passed_by_integer_register)
	(amd64_windows_passed_by_xmm_register)
	(amd64_windows_passed_by_pointer)
	(amd64_windows_adjust_args_passed_by_pointer)
	(amd64_windows_store_arg_in_reg, amd64_windows_push_arguments)
	(amd64_windows_push_dummy_call): New functions.
	(amd64_windows_init_abi): Remove setting of
	tdep->call_dummy_num_integer_regs, tdep->call_dummy_integer_regs,
	tdep->classify, tdep->memory_args_by_pointer and
	tdep->integer_param_regs_saved_in_caller_frame.
	Add call to set_gdbarch_push_dummy_call.

2013-09-24  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwarf2read.c (open_and_init_dwp_file): Try open_dwp_file also with
	objfile->original_name.

2013-09-24  Jan Kratochvil  <jan.kratochvil@redhat.com>

	Pass down original filename for objfile.
	* coffread.c (coff_symfile_read): Update symbol_file_add_separate call.
	* elfread.c (elf_symfile_read): Likewise.
	* jit.c (jit_object_close_impl): Update allocate_objfile call, no
	longer set ORIGINAL_NAME.
	(jit_bfd_try_read_symtab): Update symbol_file_add_from_bfd call.
	* jv-lang.c (get_dynamics_objfile): Update allocate_objfile call.
	* machoread.c (macho_add_oso_symfile): Add parameter name.  Update
	symbol_file_add_from_bfd call.
	(macho_symfile_read_all_oso): Update two macho_add_oso_symfile calls.
	(macho_check_dsym): Add parameter filenamep.  Change function comment.
	Set *filenamep.
	(macho_symfile_read): New variable dsym_filename.  Update
	macho_check_dsym call.  Use it for symbol_file_add_separate.
	* objfiles.c (allocate_objfile): Add parameter name.  New comment for
	it.  Use it for objfile->original_name.
	(objfile_name): Return OBFD's filename, if available.
	* objfiles.h (allocate_objfile): Add new parameter name.
	* solib.c (solib_read_symbols): Update symbol_file_add_from_bfd call.
	* symfile-mem.c (symbol_file_add_from_memory): Update